@@ -1,3 +1,12 @@
+2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	Merge this old commit from trunk.  Without it, the 2008-11-03
+	change doesn't make sense.
+
+	* Glib.exports
+	* gperl.h: Properly export gperl_param_spec_type_from_package and
+	gperl_register_param_spec, they are meant to be public.
+
 2009-02-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* t/a.t
